--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/logos/
+    - assets/images/photos/
+
+  fonts:
+    - family: Inkburrow
+      fonts:
+        - asset: assets/fonts/inkburrow.ttf
